--- a/client/src/components/register.css
+++ b/client/src/components/register.css
@@ -1,10 +1,10 @@
 .register-container {
-  width: 100vw;
-  height: 100vh;
+  width: 100svw;
+  height: 100svh;
   /* border: 1px solid red; */
   display: flex;
   justify-content: center;
-  padding: 30vh 10vw;
+  padding: 28svh 10svw;
   /* align-items: center; */
 }
 .register-card {
