--- a/client/src/components/renderchannel.css
+++ b/client/src/components/renderchannel.css
@@ -5,7 +5,7 @@
   background-color: var(--dgray-color);
   padding: 0.2rem 1rem;
   width: 100%;
-  border-radius: 10px;
+  /* border-radius: 10px; */
 }
 .sidebar-container a {
   text-decoration: none;
@@ -71,4 +71,20 @@
   width: 100%;
   justify-content: space-between;
   /* border: 1px solid pink; */
+}
+.channel-container {
+  display: flex;
+  justify-content: space-between;
+  /* align-items: center; */
+  background-color: var(--blue-color);
+  padding: 0 1rem;
+}
+.channel-container button {
+  display: flex;
+  align-items: center;
+  padding: 0.5rem;
+  border: 1px solid red;
+}
+.channel-container button ion-icon {
+  font-size: 1.7rem;
 }
