--- a/client/src/components/renderchannel.css
+++ b/client/src/components/renderchannel.css
@@ -83,7 +83,7 @@
   display: flex;
   align-items: center;
   padding: 0.5rem;
-  border: 1px solid red;
+  /* border: 1px solid red; */
 }
 .channel-container button ion-icon {
   font-size: 1.7rem;
